syntax = "proto3";
package authentication;
option go_package = ".;codegen";


// authentication service

service AuthenticationService {
  rpc SignIn(SignInRequest) returns (Response);
  rpc SignUp(SignUpRequest) returns (Response);
}


// data request/response models

message SignInData {
  string Login = 1;
  string Password = 2;
}

message SignUpData {
  string Login = 1;
  string Password = 2;
  string Name = 3;
  string Surname = 4;
}


// rpc requests

message SignInRequest {
  SignInData data = 1;
}

message SignUpRequest {
  SignUpData data = 1;
}


// rpc responses

message Response {
  uint64 UserID = 1;
}

